--- a/TimeGPT/readme
+++ b/TimeGPT/readme
@@ -1,1 +1,45 @@
+# Assignment: Exploring TimeGPT, Tabula, and Relational Deep Learning
 
+## Overview
+This repository contains Colab notebooks and artifacts for demonstrating the use of TimeGPT, Tabula, and Relational Deep Learning (RDL). Each section focuses on specific tasks and provides examples of their functionalities.
+
+## Sections
+
+### TimeGPT
+
+- **Multivariate Forecasting**: `timegpt/multivariate_forecasting.ipynb`  
+  Forecast multiple variables using example time series data.
+
+- **Long Horizon Forecasting**: `timegpt/long_horizon_forecasting.ipynb`  
+  Predict trends over extended time periods.
+
+- **Fine-Tuning TimeGPT**: `timegpt/fine_tune_timegpt.ipynb`  
+  Customize TimeGPT with your own datasets.
+
+- **Anomaly Detection**: `timegpt/anomaly_detection.ipynb`  
+  Identify anomalies in time series data.
+
+- **Energy Demand Forecasting**: `timegpt/energy_forecasting.ipynb`  
+  Predict energy demand trends.
+
+- **Bitcoin Price Prediction**: `timegpt/bitcoin_forecasting.ipynb`  
+  Forecast Bitcoin prices.
+
+### Tabula
+
+- **Synthetic Data Generation**: `tabula/synthetic_data_generation.ipynb`  
+  Generate synthetic data for a real dataset.
+
+- **Zero-Shot Inference**: `tabula/zero_shot_inference.ipynb`  
+  Perform inference with Tabula in a zero-shot setting.
+
+### Relational Deep Learning (RDL)
+
+- **GNN-Based Tabular Prediction**: `rdl/gnn_training_relbench.ipynb`  
+  Train a GNN-based model for tabular prediction tasks using RelBench.
+
+## How to Run
+
+1. Clone the repository:
+   ```bash
+   git clone https://github.com/yourusername/assignment-repo.git
